# SEELE

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  compile_commands.json  conanfile.txt
.circleci/: config.yml
.github/workflows/: gh_actions.yml  main.yml
core/: CMakeLists.txt
core/inc/: BlockCircularBuffer.h
core/inc/core/: AudioBuffer.h  BlockCircularBuffer.h  IAudioBuffer.h  InterpolatingValue.h
core/mocks/: CMakeLists.txt
core/mocks/inc/: AudioBufferMock.h
core/src/: AudioBuffer.cpp  InterpolatingValue.cpp
core/tests/: CMakeLists.txt
core/tests/src/: AudioBufferTestCase.cpp  AudioBuffferTestCase.cpp  Main.cpp
futakuchi/: CMakeLists.txt
futakuchi/futakuchiCore/: CMakeLists.txt  pupilCore.cbp
futakuchi/futakuchiCore/inc/futakuchiCore/: AmplitudeModulation.h  IFactory.h  PhaseVocoder.h  PitchShifter.h
futakuchi/futakuchiCore/mocks/: CMakeLists.txt
futakuchi/futakuchiCore/mocks/inc/: AudioProcessorMock.h  FactoryMock.h  SampleRampMock.h
futakuchi/futakuchiCore/src/: SampleRamp.cpp
futakuchi/futakuchiCore/tests/: CMakeLists.txt
futakuchi/futakuchiCore/tests/src/: AmplitudeModulationTestCase.cpp  EngineTestCase.cpp  SampleRampTestCase.cpp
futakuchi/inc/: PluginProcessor.h
futakuchi/mocks/: CMakeLists.txt
futakuchi/src/: PluginProcessor.cpp
futakuchi/tests/: CMakeLists.txt
pupil/: CMakeLists.txt
pupil/inc/: PluginProcessor.h
pupil/mocks/: CMakeLists.txt
pupil/pupilCore/: CMakeLists.txt
pupil/pupilCore/inc/pupilCore/: Chopper.h  DelayProcessor.h  Engine.h  Factory.h  IAudioProcessor.h  IFactory.h  ISampleRamp.h
pupil/pupilCore/mocks/: CMakeLists.txt
pupil/pupilCore/mocks/inc/: AudioProcessorMock.h  FactoryMock.h  SampleRampMock.h
pupil/pupilCore/src/: Chopper.cpp  DelayProcessor.cpp  Engine.cpp  Factory.cpp
pupil/pupilCore/tests/: CMakeLists.txt  pupilCoreTestHost
pupil/pupilCore/tests/src/: AmplitudeModulationTestCase.cpp  ChopperTestCase.cpp  EngineTestCase.cpp  Main.cpp  SampleRampTestCase.cpp
pupil/src/: PluginProcessor.cpp
pupil/tests/: CMakeLists.txt  pupilTestHost
seele/: CMakeLists.txt
seele/inc/: Font.h  MainComponent.h  MemberArea.h  MiniSlider.h  Oscilloscope.h  PluginEditor.h  PluginProcessor.h  SeeleSlider.h  SliderLookAndFeel.h  SummonToggle.h  TextBox.h  ToggleButtonLookAndFeel.h  UiConstants.h
seele/mocks/: CMakeLists.txt
seele/resources/: CMakeLists.txt  CTestTestfile.cmake
seele/seeleCore/: CMakeLists.txt
seele/seeleCore/inc/seeleCore/: Analysis.h  Config.h  DelayProcessor.h  Engine.h  Factory.h  GainProcessor.h  IAnalysis.h  IAudioBuffer.h  IAudioProcessor.h  IChannelProcessor.h  IDelayProcessor.h  IFactory.h  IGainProcessor.h  IMemberParameterSet.h  IPhaseCorrector.h  IPitchShifter.h  IPitchShifterManager.h  ISynthesis.h  MemberParameterSet.h  PhaseCorrector.h  PhaseVocoder.h  PitchShifter.h  PitchShifterManager.h  RescalingProcessor.h  SampleRamp.h  Synthesis.h
seele/seeleCore/mocks/: CMakeLists.txt
seele/seeleCore/mocks/inc/: AnalysisMock.h  AudioProcessorMock.h  DelayProcessorMock.h  FactoryMock.h  GainProcessorMock.h  MemberParameterSetMock.h  PitchShifterManagerMock.h  PitchShifterMock.h  SampleRampMock.h  SynthesisMock.h
seele/seeleCore/src/: AmplitudeModulation.cpp  Analysis.cpp  DelayProcessor.cpp  Engine.cpp  Factory.cpp  GainProcessor.cpp  MemberParameterSet.cpp  PhaseCorrector.cpp  PhaseVocoder.cpp  PitchShifter.cpp  PitchShifter.cpp.orig  PitchShifterManager.cpp  RescalingProcessor.cpp  Synthesis.cpp
seele/seeleCore/tests/: CMakeLists.txt
seele/seeleCore/tests/inc/: matplotlibcpp.h
seele/seeleCore/tests/src/: AmplitudeModulationTestCase.cpp  BlockCircularBufferTestCase.cpp  EngineTestCase.cpp  FactoryTestCase.cpp  PitchShifterTestCase.cpp  SampleRampTestCase.cpp  SynthesisTestCase.cpp
seele/seeleCore/tests/src/integration/: EngineTestCase.cpp
seele/src/: MainComponent.cpp  MemberArea.cpp  Oscilloscope.cpp  PluginEditor.cpp  PluginProcessor.cpp
seele/tests/: CMakeLists.txt
